--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,22 @@
-django==2.1.7
-ipython==7.4.0
-pillow==5.4.1
-pip-chill==0.1.8
+certifi==2019.3.9
+chardet==3.0.4
+defusedxml==0.6.0
+Django==2.2
 django-debug-toolbar==1.11
+idna==2.8
+memory-profiler==0.55.0
+oauthlib==3.0.1
+Pillow==5.4.1
+psutil==5.6.1
+PyJWT==1.7.1
+python3-openid==3.1.0
+pytz==2018.9
+requests==2.21.0
+requests-oauthlib==1.2.0
+six==1.12.0
 social-auth-app-django==3.1.0
-
+social-auth-core==3.1.0
+sqlparse==0.3.0
+urllib3==1.24.2
+virtualenv==16.4.3
+virtualenvwrapper-win==1.2.5
